beryllium (0.3.9) debian;

  * DICOM debug command line switches

 -- Pavel Bludov <pbludov@gmail.com>  Fri, 13 Sep 2013 14:40:57 +0900

beryllium (0.3.8) debian;

  * First build

 -- Pavel Bludov <pbludov@gmail.com>  Fri, 26 Apr 2013 19:46:55 +0900